Added groups command that display player active groups. Added ranking calculation. Added guilds chat.